# shmlock

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
.github/: CODEOWNERS  auto-assign.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: arm-no-gil-test-alt.yml  arm-no-gil-test.yml  pypi_publish.yml  python-tests.yml  testpypi_publish.yml
.github/workflows/archive/: pypi_test_publish.yml
examples/multiple_terminals/: run_multiple.py
examples/performance_analysis/: run_perf.py  run_poll_perf.py
examples/remove_shm_from_resource_tracker/: remove_shm_from_resource_tracker.py
shmlock/: __init__.py  shmlock_base_logger.py  shmlock_config.py  shmlock_exceptions.py  shmlock_main.py  shmlock_monkey_patch.py  shmlock_resource_tracking.py  shmlock_uuid.py  shmlock_warnings.py
shmlock-4.3.0.dist-info/: METADATA
tests/: test_basics.py  test_custom_resource_tracking.py  test_debug_query_method_mostly_posix.py  test_exit_event.py  test_improved_functionality.py  test_init.py  test_monkey_patch.py  test_multiprocessing_and_threading.py  test_multiprocessing_check_release_at_termination.py  test_posix_linux.py
