[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "shmlock"
dynamic = ["version"]
description = "This module provides an inter-process lock implementation, eliminating the need to pass around objects for synchronization. Under the hood, the module leverages the shared_memory module."
long_description = "file: README.md"
long_description_content_type = "text/markdown"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Fabian Krumm", email = "ghub_fk@gmx.de" },
]
keywords = ["lock", "multiprocessing", "shared-memory", "synchronization", "inter-process"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "pywin32>300,<400; platform_system == 'Windows'"
]

[tool.pdm.build]
source-includes = [
    "tests/",
    "requirements.txt",
]

[tool.pdm]
version = { source = "file", path = "shmlock/__init__.py" }
distribution = true

[project.urls]
homepage = "https://github.com/fwkrumm/shmlock"
repository = "https://github.com/fwkrumm/shmlock"
documentation = "https://github.com/fwkrumm/shmlock#readme"
changelog = "https://github.com/fwkrumm/shmlock/blob/main/README.md#version-history"
issues = "https://github.com/fwkrumm/shmlock/issues"

[project.optional-dependencies]
dev = [
    "pylint>=3.0,<4.0",
    "coverage>=7.0,<8.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]
test = [
    "coverage>=7.0,<8.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
examples = [
    "filelock>=3.0,<4.0",
    "pyzmq>=26.0,<27.0",
    "coloredlogs>=15.0,<16.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["shmlock"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=shmlock",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
